# proof_of_concept

./: README.md
apl/: iota999.apl
assembly/: bubble_sort.asm
c/containers/: test.cpp  test_vector_int  test_vector_int.cpp  test_vector_string  test_vector_string.cpp
c/getenv/: Makefile  get.cpp
c/gtk/: gtk_example  gtk_example.c
c/gtk/crud/: crud  (+1 more)
c/kolby-menu-0.1/: COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  configure.scan  menu
c/kolby-menu-0.1/autom4te.cache/: output.0  output.1  output.2  requests  traces.1  traces.2  traces.3
c/kolby-menu-0.2.raw/: AUTHORS  ChangeLog  INSTALL  LICENSE  NEWS  README  main.c  menu.c  menu.h
c/limits/: limits.cpp
c/regex/: main.cpp  regex_test  regex_test.cpp  scrape.cpp  scrape_ip  source_text.txt  strip_ip_addresses  strip_ip_addresses.cpp  strip_ip_addresses.cpp.old  strip_ip_addresses_from_file.cpp  test
c/try_statements/: domain_error  domain_error.cpp  error.txt  main.cpp  output.txt  test  test_vector_string  test_vector_string.cpp
cpp/boost/: hello2  large_numbers  large_numbers.cpp  uuid_example  uuid_example.cpp
cpp/config_parser/: demo.config  parse.cpp
haskell/: Homework
haskell/System/: system_test.hs
haskell/hello/: hello.hs
java/Add/: Add.java
javascript/: greatestCommonDivisor.js  isPrime.js
pil/: convert.py  grey.py
python/: answer.py  async_example.py  dkey.py  dkey.py.old  domainchecker.py  generator_example.py  hello.py  scrape_exim.py  scrape_ip_address.py
python/events/: lib64  sample.py
python/flower/: flower2.py
(+5 files in other folders)
